--- a/app/src/main/res/layout/layout_top_right.xml
+++ b/app/src/main/res/layout/layout_top_right.xml
@@ -9,14 +9,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <ImageView
-        android:id="@+id/img_close_render"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:padding="5dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:src="@mipmap/btn_shotdown"
-        android:visibility="gone" />
+    <FrameLayout
+        android:id="@+id/fl_video_loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#292E35"
+        android:visibility="gone"
+        >
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+    </FrameLayout>
+
 </RelativeLayout>
