--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,84 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:orientation="vertical"
+    android:background="@drawable/background">
 
-    <ImageView
+    <android.support.v4.widget.Space
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:background="@drawable/logo" />
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
 
-
-
-    <RelativeLayout
-        android:id="@+id/rl_had_send_code"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:orientation="vertical">
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/logo" />
 
 
         <ImageView
             android:id="@+id/icon"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
             android:src="@drawable/img_off_line" />
 
         <TextView
             android:id="@+id/tv_userid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/icon"
+            android:layout_gravity="center"
             android:layout_marginTop="12dp"
-            android:layout_centerHorizontal="true"
             android:textColor="@color/white" />
+        <android.support.v4.widget.Space
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <EditText
+            android:id="@+id/et_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:layout_marginLeft="42dp"
+            android:layout_marginRight="42dp"
+            android:drawableLeft="@drawable/img_phone"
+            android:drawablePadding="6dp"
+            android:gravity="center_vertical"
+            android:hint="请输入手机号"
+            android:textColor="@color/white"
+            android:textColorHint="#999999"
+            android:theme="@style/MyEditText"
+            android:visibility="invisible" />
 
-    </RelativeLayout>
-    <EditText
-        android:id="@+id/et_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/img_phone"
-        android:drawablePadding="6dp"
-        android:gravity="center_vertical"
-        android:hint="请输入手机号"
-        android:visibility="gone"
-        android:layout_marginLeft="42dp"
-        android:layout_marginRight="42dp"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@+id/tv_go_pre"
-        android:textColor="@color/white"
-        android:layout_marginBottom="12dp"
-        android:textColorHint="#999999"
-        android:theme="@style/MyEditText" />
 
-    <TextView
-        android:id="@+id/tv_go_pre"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_above="@+id/tv_call"
-        android:layout_marginBottom="40dp"
-        android:layout_marginLeft="42dp"
-        android:layout_marginRight="42dp"
-        android:background="@drawable/shape_index_solid_button"
-        android:gravity="center"
-        android:text="发起通话"
-        android:textColor="@color/white" />
+        <TextView
+            android:id="@+id/tv_go_pre"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginLeft="42dp"
+            android:layout_marginRight="42dp"
+            android:background="@drawable/shape_index_solid_button"
+            android:gravity="center"
+            android:text="发起通话"
+            android:textColor="@color/white" />
+        <android.support.v4.widget.Space
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
 
-    <TextView
-        android:id="@+id/tv_call"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="12dp"
-        android:layout_marginTop="30dp"
-        android:gravity="center"
-        android:padding="12dp"
-        android:text="技术支持：021-65650071"
-        android:textColor="@color/white" />
+        <TextView
+            android:id="@+id/tv_call"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:layout_marginTop="30dp"
+            android:gravity="center"
+            android:padding="12dp"
+            android:text="技术支持：021-65650071"
+            android:textColor="@color/white" />
+    </LinearLayout>
 
-</RelativeLayout>
+
+
+</LinearLayout>
