--- a/app/src/main/res/layout/activity_pre_call.xml
+++ b/app/src/main/res/layout/activity_pre_call.xml
@@ -52,7 +52,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_centerInParent="true"
-            android:src="@drawable/img_on_line"
+            android:src="@drawable/img_off_line"
              />
 
         <TextView
