--- a/app/src/main/res/layout/layout_arvideo.xml
+++ b/app/src/main/res/layout/layout_arvideo.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <org.webrtc.SurfaceViewRenderer
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+   >
+
+    <TextView
+        android:id="@+id/tv_net"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"></TextView>
+
+    <org.webrtc.TextureViewRenderer
         android:id="@+id/sv_video_render"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
@@ -12,12 +19,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#292E35"
-        android:visibility="gone"
-        >
+        android:visibility="gone">
+
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center" />
     </FrameLayout>
+
+
 
 </RelativeLayout>
